# mkdirset

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
mkdirset/: builder.py  cli.py  dumper.py
