[metadata]
name = mkdirset
version = 0.1.0
description = CLI tool to build and dump directory structures
author = Akamurasaki1
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Akamurasaki1/mkdirset
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    mkdirset = mkdirset.cli:main
